# nacos-playground

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yaml  forex_tool.py  pyproject.toml  search_tool.py
conf/: oracle.schema.reset.sql  oracle.schema.sql
notebooks/: nacos.ipynb  nacos_v3.ipynb
standalone-logs/: alipay-jraft.log.2025-08-04.0  alipay-jraft.log.2025-08-05.0  alipay-jraft.log.2025-08-06.0  alipay-jraft.log.2025-08-07.0  config-client-request.log.2025-08-04.0  config-client-request.log.2025-08-05.0  config-client-request.log.2025-08-06.0  config-client-request.log.2025-08-07.0  config-dump.log.2025-08-04.0  config-dump.log.2025-08-05.0  config-dump.log.2025-08-06.0  config-dump.log.2025-08-07.0  config-memory.log.2025-08-04.0  config-memory.log.2025-08-05.0  config-memory.log.2025-08-06.0  config-memory.log.2025-08-07.0  config-server.log.2025-08-04.0  config-server.log.2025-08-05.0  config-server.log.2025-08-06.0  config-server.log.2025-08-07.0  config-trace.log.2025-08-04.0  config-trace.log.2025-08-05.0  config-trace.log.2025-08-06.0  core-auth.log.2025-08-04.0  core-auth.log.2025-08-05.0  core-auth.log.2025-08-06.0  core-auth.log.2025-08-07.0  k8s-sync-main.log.2025-08-04.0  k8s-sync-main.log.2025-08-05.0  k8s-sync-main.log.2025-08-06.0  k8s-sync-main.log.2025-08-07.0  nacos-cluster.log.2025-08-04.0  nacos-cluster.log.2025-08-05.0  nacos-cluster.log.2025-08-06.0  nacos-cluster.log.2025-08-07.0  nacos-persistence.log.2025-08-04.0  nacos-persistence.log.2025-08-05.0  nacos-persistence.log.2025-08-06.0  nacos-persistence.log.2025-08-07.0  (+43 more)
(+47 files in other folders)
