[project]
name = "nacos-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.1",
    "fastmcp>=2.11.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "llama-index>=0.13.0",
    "llama-index-embeddings-ollama>=0.7.0",
    "llama-index-llms-ollama>=0.7.0",
    "python-nacos>=0.1.1",
]
