[project]
name = "nacos-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.1",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.3",
    "nacos-mcp-router>=0.1.9",
    "nacos-mcp-wrapper-python>=1.0.8",
    "python-nacos>=0.1.1",
]
