[project]
name = "nacos-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-mcp>=0.4.2",
    "acp-sdk>=1.0.1",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.3",
    "nacos-mcp-router>=0.1.9",
    "nacos-mcp-wrapper-python>=1.0.8",
    "python-nacos>=0.1.1",
]
